# jamak

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
docs/: PHASE1_BASELINE.md  PROJECT_PLAN.md  THIRD_PARTY_NOTICES.md
src/jamak/: __about__.py  __init__.py
src/jamak/app/: typer_cli.py
src/jamak/core/: align.py  asr.py  pipeline.py  subtitle.py  translate.py  vad.py
src/jamak/infra/: __init__.py  config.py  device.py  doctor.py  ffmpeg.py  language.py  model_loader.py  storage.py
src/jamak/schemas/: job.py  segment.py  subtitle.py
tests/integration/: test_phase1_pipeline_smoke.py  test_phase1_placeholder.py
tests/unit/: test_config_policy.py  test_doctor_report.py  test_language_validation.py  test_pipeline_phase1.py  test_subtitle_io.py  test_translate_adapter.py  test_vad.py
