[project]
name = "jamak"
version = "0.1.0"
description = "CLI-first subtitle generation pipeline with VAD, ASR, and forced alignment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cn2an>=0.5.23",
    "kaldi-native-fbank>=1.22.3",
    "kaldiio>=2.18.1",
    "numpy>=2.4.2",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "textgrid>=1.6.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "transformers>=4.57.6,<5",
    "typer>=0.16.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.scripts]
jamak = "jamak.app.typer_cli:run"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jamak"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
